# Newt

./: CMakeLists.txt  README.md
include/newt/: config.h.in  newt.h
src/: CMakeLists.txt
src/example/: CMakeLists.txt  main.c
src/libnewt/: CMakeLists.txt  free_list.c  handle.c  newt_priv.h  string.c  value.c  vm_init.c
